# bnet2hoa

./: .gitignore  LICENSE  README.md  pyproject.toml
bnet2hoa/: bnet.lark  bnet.py  main.py
bnet2hoa/data/: BNetToPrime-macos
test/: test_evals.py
