[project]
name = "bnet2hoa"
version = "0.3.1"
description = "Generate the state space of a Boolean network in HOA format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.2.4",
    "lark>=1.3.1",
    "msgspec>=0.20.0",
    "setuptools>=82.0.1",
    "sympy>=1.14.0",
]


[project.scripts]
bnet2hoa = "bnet2hoa.main:main"
bnet2hoa-parse = "bnet2hoa.bnet:main"

[dependency-groups]
dev = [
    "hypothesis>=6.151.5",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
